--- a/WebUIBlazor/Pages/ContainerSpaceBetween.razor
+++ b/WebUIBlazor/Pages/ContainerSpaceBetween.razor
@@ -1,4 +1,4 @@
-﻿<MudContainer Style="display: flex; justify-content:space-between;">
+﻿<MudContainer Class="@Class" Style="display: flex; justify-content:space-between;">
     @ChildContent
 </MudContainer>
 
@@ -6,5 +6,9 @@
 
     [Parameter]
     public RenderFragment ChildContent { get; set; }
+
+    [Parameter]
+    public string Class { get; set; }
+
     private MudTheme Theme = new MudTheme();
 }
