added printer history component
fixed printer progress stats
fixed temperature updates on UI

--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -49,6 +49,8 @@
             background.ConnectionServiceSerial.Write("M113 S1");
             //ask for bed volume
             background.ConnectionServiceSerial.Write("M211");
+            //Report SD status every 2 seconds
+            background.ConnectionServiceSerial.Write("M27 S2");
         }
         catch (Exception e)
         {
