--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -1,7 +1,8 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Connection</MudNavLink>
     <MudNavLink Href="/controlpanel" Match="NavLinkMatch.Prefix">Control Panel</MudNavLink>
-    <MudNavLink Href="/print" Match="NavLinkMatch.Prefix">Print</MudNavLink>
+    <MudNavLink Href="/print" Match="NavLinkMatch.Prefix">Print Progress</MudNavLink>
+    <MudNavLink Href="/printhistory" Match="NavLinkMatch.Prefix">Print History</MudNavLink>
     <MudNavLink Href="/printersettings" Match="NavLinkMatch.Prefix">Printer Settings</MudNavLink>
-    <MudNavLink Href="/printers" Match="NavLinkMatch.Prefix">Printer</MudNavLink>
+    @* <MudNavLink Href="/printers" Match="NavLinkMatch.Prefix">Printer</MudNavLink> *@
 </MudNavMenu>
