--- a/WebUIBlazor/Pages/PrinterSettings.razor
+++ b/WebUIBlazor/Pages/PrinterSettings.razor
@@ -102,7 +102,9 @@
 <MudPaper Class="" Elevation="0">
     <div style="display: flex; justify-content:center; padding-top:10px; padding-bottom: 10px; padding-left: 20px;">
 
-        <MudIconButton Icon="@Icons.Material.Filled.Refresh" Variant="Variant.Text" Color="Color.Primary" OnClick="printer.GetPrinterSettings" />
+        <MudTooltip Text="Refresh if some settings are missing">
+            <MudIconButton Icon="@Icons.Material.Filled.Refresh" Variant="Variant.Text" Color="Color.Tertiary" OnClick="printer.GetPrinterSettings" />
+        </MudTooltip>
         <MudText Typo="Typo.h4" Align="Align.Center" Color="Color.Primary"> Printer Settings</MudText>
     </div>
     <MudTabs>
